// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate.create custom folder and schema filename name ok 1`] = `
Array [
  Object {
    source: my_db,
    tag: CreateSource,
  },
  Object {
    argument: provider,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "sqlite",
  },
  Object {
    argument: url,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "***",
  },
  Object {
    argument: default,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: true,
  },
  Object {
    model: User,
    tag: CreateModel,
  },
  Object {
    arity: Required,
    field: id,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    location: Object {
      directive: id,
      path: Object {
        field: id,
        model: User,
        tag: Field,
      },
    },
    tag: CreateDirective,
  },
]
`;

exports[`migrate.create custom folder and schema filename name ok 2`] = `Array []`;

exports[`migrate.create custom folder and schema filename name ok 3`] = `Array []`;

exports[`migrate.create custom schema filename ok 1`] = `
Array [
  Object {
    source: my_db,
    tag: CreateSource,
  },
  Object {
    argument: provider,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "sqlite",
  },
  Object {
    argument: url,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "***",
  },
  Object {
    argument: default,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: true,
  },
  Object {
    model: User,
    tag: CreateModel,
  },
  Object {
    arity: Required,
    field: id,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    location: Object {
      directive: id,
      path: Object {
        field: id,
        model: User,
        tag: Field,
      },
    },
    tag: CreateDirective,
  },
]
`;

exports[`migrate.create custom schema filename ok 2`] = `Array []`;

exports[`migrate.create custom schema filename ok 3`] = `Array []`;

exports[`migrate.create dashes ok 1`] = `
Array [
  Object {
    source: my_db,
    tag: CreateSource,
  },
  Object {
    argument: provider,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "sqlite",
  },
  Object {
    argument: url,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "***",
  },
  Object {
    argument: default,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: true,
  },
  Object {
    model: User,
    tag: CreateModel,
  },
  Object {
    arity: Required,
    field: id,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    location: Object {
      directive: id,
      path: Object {
        field: id,
        model: User,
        tag: Field,
      },
    },
    tag: CreateDirective,
  },
]
`;

exports[`migrate.create dashes ok 2`] = `Array []`;

exports[`migrate.create dashes ok 3`] = `Array []`;

exports[`migrate.create invalid ok 1`] = `
Array [
  Object {
    source: my_db,
    tag: CreateSource,
  },
  Object {
    argument: provider,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "sqlite",
  },
  Object {
    argument: url,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "***",
  },
  Object {
    argument: default,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: true,
  },
  Object {
    model: User,
    tag: CreateModel,
  },
  Object {
    arity: Required,
    field: id,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    location: Object {
      directive: id,
      path: Object {
        field: id,
        model: User,
        tag: Field,
      },
    },
    tag: CreateDirective,
  },
  Object {
    arity: Optional,
    field: canBeNull,
    model: User,
    tag: CreateField,
    type: String,
  },
]
`;

exports[`migrate.create invalid ok 2`] = `Array []`;

exports[`migrate.create invalid ok 3`] = `Array []`;

exports[`migrate.create invalid ok 4`] = `

Prisma Migrate just created your migration XXXXXXXXXXXXXX-init in

migrations/
  └─ XXXXXXXXXXXXXX-init/
    └─ steps.json
    └─ schema.prisma
    └─ README.md

Run prisma migrate up --experimental to apply the migration

`;

exports[`migrate.create invalid ok 5`] = `
Array [
  Object {
    arity: Required,
    field: requiredSomething,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    arity: Required,
    field: canBeNull,
    model: User,
    tag: UpdateField,
    type: Int,
  },
]
`;

exports[`migrate.create invalid ok 6`] = `
Array [
  Object {
    description: You are about to alter the column \`canBeNull\` on the \`User\` table, which contains 1 non-null values. The data in that column will be cast from \`String\` to \`Int\`.,
    step_index: 0,
  },
]
`;

exports[`migrate.create invalid ok 7`] = `


⚠️ We found migration(s) that cannot be executed:

  • Added the required column \`requiredSomething\` to the \`User\` table without a default value. There are 1 rows in this table, it is not possible to execute this migration.

`;

exports[`migrate.create invalid ok 8`] = `
Prisma schema loaded from schema2.prisma
📼  migrate save --name init-2

Local datamodel Changes:

model User {
  id Int @id
  canBeNull String?
  canBeNull Int
  requiredSomething Int 
}
`;

exports[`migrate.create simple debug panic 1`] = `
Error in migration engine.
Reason: [/some/rust/path:0:0] This is the debugPanic artificial panic

Please create an issue in the migrate repo with
your \`schema.prisma\` and the prisma command you tried to use 🙏:
https://github.com/prisma/migrate/issues/new

`;

exports[`migrate.create simple ok 1`] = `
Array [
  Object {
    source: my_db,
    tag: CreateSource,
  },
  Object {
    argument: provider,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "sqlite",
  },
  Object {
    argument: url,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "***",
  },
  Object {
    argument: default,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: true,
  },
  Object {
    model: User,
    tag: CreateModel,
  },
  Object {
    arity: Required,
    field: id,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    location: Object {
      directive: id,
      path: Object {
        field: id,
        model: User,
        tag: Field,
      },
    },
    tag: CreateDirective,
  },
]
`;

exports[`migrate.create simple ok 2`] = `Array []`;

exports[`migrate.create simple ok 3`] = `Array []`;

exports[`migrate.create spaces ok 1`] = `
Array [
  Object {
    source: my_db,
    tag: CreateSource,
  },
  Object {
    argument: provider,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "sqlite",
  },
  Object {
    argument: url,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: "***",
  },
  Object {
    argument: default,
    location: Object {
      source: my_db,
      tag: Source,
    },
    tag: CreateArgument,
    value: true,
  },
  Object {
    model: User,
    tag: CreateModel,
  },
  Object {
    arity: Required,
    field: id,
    model: User,
    tag: CreateField,
    type: Int,
  },
  Object {
    location: Object {
      directive: id,
      path: Object {
        field: id,
        model: User,
        tag: Field,
      },
    },
    tag: CreateDirective,
  },
]
`;

exports[`migrate.create spaces ok 2`] = `Array []`;

exports[`migrate.create spaces ok 3`] = `Array []`;
